Use a smaller table for testStarTreeWithDistinctCountHllConfigurations; move to separate test class